fixed collection index pagination issues; fixed span.appliedFilter visual overlap of responsive header nav; added :sort to :omit_keys in header search form

--- a/app/assets/stylesheets/commonwealth/header.css.scss
+++ b/app/assets/stylesheets/commonwealth/header.css.scss
@@ -101,6 +101,7 @@ body.blacklight-home #header-navbar-fixed-top .navbar-inner {
   /* float: right; */
   padding-right: .5em;
   top: 4px;
+  z-index: 2;
 }
 
 .nav-collapse .btn {
