--- a/app/assets/stylesheets/commonwealth/index.css.scss
+++ b/app/assets/stylesheets/commonwealth/index.css.scss
@@ -8,6 +8,10 @@
   padding-top: .3em;
 }
 
+.appliedFilter {
+  z-index: 1;
+}
+
 .catalog_startOverLink {
   float: none;
   padding-top: 0;
